--- a/action.yml
+++ b/action.yml
@@ -13,23 +13,51 @@ inputs:
     required: true
     # starts with zero or more leading whitespace chars, WIP and zero or more colons
     default: "^[[:space:]]*(WIP)+(:)*"
+  debug:
+    description: "Enable verbose logging"
+    required: false
+    default: "false"
 runs:
   using: "composite"
   steps:
     - shell: bash
+      env:
+        TITLE: ${{ inputs.title }}
+        REGEX: ${{ inputs.regex }}
+        DEBUG: ${{ inputs.debug }}
       run: |
-        set -ex
+        set -e
 
+        if [[ ${DEBUG} == "true" ]]; then 
+          echo "Enabling debug output"
+          set -x
+        fi
+        
         # TODO (@mgasch): make configurable
         # case-insensitive
         shopt -s nocasematch
-
-        if [[ '${{ inputs.title }}' =~ ${{ inputs.regex }} ]]; then
+        
+        if [[ -z ${TITLE} ]]; then 
+          echo "::error::title input must be set";
+          exit 1
+        fi
+        
+        if [[ -z ${REGEX} ]]; then 
+          echo "::error::regex input must be set";
+          exit 1
+        fi
+        
+        if [[ ${TITLE} =~ ${REGEX} ]]; then
           echo "::error::Title marked as work in progress"
           exit 1
         else
-          echo "::debug::Title not marked as work in progress"
+          echo "Title not marked as work in progress"
         fi
-
+        
         # unset nocasematch option
         shopt -u nocasematch
+
+        if [[ ${DEBUG} == "true" ]]; then 
+          echo "Disabling debug output"
+          set +x
+        fi
